<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_1">

    <TextView
        android:id="@+id/icon_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/time_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_title"
        style="@style/Text.H3.Bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="@id/chance_rain_title"
        app:layout_constraintEnd_toStartOf="@id/temp_title"
        app:layout_constraintStart_toEndOf="@id/icon_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temp_title"
        style="@style/Text.H3.Bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:text="@string/temp"
        app:layout_constraintBottom_toBottomOf="@id/chance_rain_title"
        app:layout_constraintEnd_toStartOf="@id/chance_rain_title"
        app:layout_constraintStart_toEndOf="@id/time_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chance_rain_title"
        style="@style/Text.H3.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chance_of_rain"
        app:layout_constraintEnd_toStartOf="@id/wind_title"
        app:layout_constraintStart_toEndOf="@id/temp_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wind_title"
        style="@style/Text.H3.Bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:text="@string/wind"
        app:layout_constraintBottom_toBottomOf="@id/chance_rain_title"
        app:layout_constraintEnd_toStartOf="@id/humidity_title"
        app:layout_constraintStart_toEndOf="@id/chance_rain_title"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidity_title"
        style="@style/Text.H3.Bold"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|bottom"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="@id/chance_rain_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wind_title"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>